# gpu-qual

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.cache/clangd/index/: main.cpp.51B9190AC9BFF223.idx  main_test.cpp.B4B547492F572BA3.idx
include/gpu_qual/: backend.hpp  io_json.hpp  observed.hpp  pipeline.hpp  probe.hpp  reconcile.hpp  spec.hpp  verdict.hpp  version.hpp
schemas/: contract_schema.json
src/: backend.cpp  io_json.cpp  main.cpp  mock_backend.cpp  nvml_api.hpp  nvml_backend.cpp  nvml_probe.cpp  observed.cpp  pipeline.cpp  reconcile.cpp  spec.cpp  verdict.cpp  version.cpp
tests/: CMakeLists.txt  backend_test.cpp  compute_result_test.cpp  io_json_test.cpp  main_test.cpp  nvml_probe_test.cpp  observed_json_test.cpp  parse_version_test.cpp  pipeline_test.cpp  reason_test.cpp  reconcile_test.cpp  spec_test.cpp  verdict_test.cpp  version_test.cpp
